--- a/src/styles/Project1Page.css
+++ b/src/styles/Project1Page.css
@@ -10,7 +10,7 @@
 }
 
 body.dark-mode .project-page-container {
-  background-color: #1a202c;
+  background-color: #171718;
 }
 
 .project-page-content {
