--- a/src/styles/Services2Page.css
+++ b/src/styles/Services2Page.css
@@ -11,7 +11,7 @@
 }
 
 body.dark-mode .service-page-container {
-  background-color: #1a202c;
+  background-color: #171718;
 }
 
 .service-page-content {
