--- a/src/styles/Services1Page.css
+++ b/src/styles/Services1Page.css
@@ -10,7 +10,7 @@
 }
 
 body.dark-mode .service-page-container {
-  background-color: #1a202c;
+  background-color: #171718;
 }
 
 .service-page-content {
