--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -1,9 +1,8 @@
-/* --- Services Section --- */
 .services-section {
   padding: 4rem 1rem;
   background-color: #D3D3D3;
   text-align: center;
-  height: auto; /* Allow height to be determined by content */
+  height: auto;
   min-height: 100vh;
 }
 
@@ -21,7 +20,6 @@ body.dark-mode .services-section {
   font-weight: bold;
 }
 
-/* --- Services Grid --- */
 .services-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -30,17 +28,16 @@ body.dark-mode .services-section {
   margin: 0 auto;
 }
 
-/* --- Service Card Customization --- */
 .service-card {
-  background-color: #ffffff; /* White background for the card */
-  border: 3px solid #c24e00; /* Light gray border */
-  color: #111827; /* Dark text color */
+  background-color: #ffffff;
+  border: 3px solid #c24e00;
+  color: #111827;
 }
 
 body.dark-mode .service-card {
-  background-color: #171718;; /* Dark background for dark mode */
-  border: 3px solid #c24e00; /* Darker border for dark mode */
-  color: #f3f4f6; /* Light text color for dark mode */
+  background-color: #171718;
+  border: 3px solid #c24e00;
+  color: #f3f4f6;
 }
 
 .service-content {
@@ -80,7 +77,7 @@ body.dark-mode .service-card {
 .service-handle {
   margin-top: 1rem;
   font-weight: 600;
-  color: #3b82f6; /* Example color */
+  color: #3b82f6;
   text-decoration: none;
   align-self: flex-end;
   transition: color 0.3s ease;
@@ -90,17 +87,15 @@ body.dark-mode .service-card {
   color: #2563eb;
 }
 
-/* Services.css */
-
 @media (max-width: 768px) {
   .services-section {
-    padding: 4rem 1rem; /* Reduce side padding on mobile */
+    padding: 4rem 1rem;
     height: auto;
     width: 100%;
   }
 
   .services-grid {
-    gap: 1.5rem; /* Reduce the gap between cards */
+    gap: 1.5rem;
     grid-template-columns: 1fr;
     width: 90%;
   }
@@ -108,7 +103,6 @@ body.dark-mode .service-card {
 
 @media (max-width: 480px) {
   .services-grid {
-    /* On very small screens, ensure it doesn't try to fit 300px */
     grid-template-columns: 1fr;
   }
 }
